--- a/contact us.html
+++ b/contact us.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="contactus.css">
+   <link rel="stylesheet" href="responsive.css">
   
 </head>
 
